@@ -34,6 +34,7 @@ Version x.x.x (not yet released)
  * Make encoding problems fatal; to resolve, restart at CleanMetadataPass.
 
  Miscellaneous:
+ * Change the default symbol handling option to --symbol-default=heuristic.
 
 
 Version 2.0.1 (04 October 2007)
